--- a/src/main/resources/crd/EntandoComponentBundleCRD.yaml
+++ b/src/main/resources/crd/EntandoComponentBundleCRD.yaml
@@ -29,6 +29,7 @@ spec:
               properties:
                 name:
                   type: string
+                  pattern: '([a-zA-Z]\s?)+'
                 email:
                   type: string
                   format: email
@@ -59,3 +60,4 @@ spec:
                     type: string
                   timestamp:
                     type: string
+                    format: date-time
