--- a/src/main/resources/crd/EntandoComponentBundleCRD.yaml
+++ b/src/main/resources/crd/EntandoComponentBundleCRD.yaml
@@ -37,7 +37,7 @@ spec:
                 type: string
                 minLength: 3
                 maxLength: 255
-                pattern: '^(([a-z0-9]+)[\-_\.]?)+$'
+                pattern: '^(?:[a-z0-9]+[\-_\.]?)+$'
             images:
               type: array
               items:
